@@ -1,6 +1,7 @@
 2007-11-25  Tor Lillqvist  <tml@novell.com>
 
-	* glib/Makefile.am: Build gtestutils etc on OS_UNIX only.
+	* glib/gtestutils.c: Add conditionals for non-Unix. Just g_error()
+	unless G_OS_UNIX for now.
 
 2007-11-25  Matthias Clasen  <mclasen@redhat.com>
 
